k8s/adminer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer-deployment
  labels:
    app: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
      - name: adminer
        image: adminer
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: ".1"
            memory: "256Mi"
 
---

apiVersion: v1
kind: Service
metadata:
  name: adminer-service
spec:
  selector:
    app: adminer
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
