k8s/attachment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: attachment-service
  labels:
    app: attachment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: attachment-service
  template:
    metadata:
      labels:
        app: attachment-service
    spec:
      containers:
      - name: attachment-service
        image: zios07/attachment-service:0.1.0
        ports:
        - containerPort: 9902
        resources:
          limits:
            cpu: ".1"
            memory: "256Mi"
---

apiVersion: v1
kind: Service
metadata:
  name: attachment-service
spec:
  selector:
    app: attachment-service
  ports:
  - port: 9902
