k8s/discovery-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-server
  labels:
    app: discovery-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-server
  template:
    metadata:
      labels:
        app: discovery-server
    spec:
      containers:
      - name: discovery-server
        image: zios07/discovery-server
        ports:
        - containerPort: 8761
        resources:
          limits:
            cpu: ".1"
            memory: "256Mi"
---

apiVersion: v1
kind: Service
metadata:
  name: discovery-server
spec:
  selector:
    app: discovery-server
  type: NodePort
  ports:
  - protocol: TCP
    port: 8761
    targetPort: 8761
