k8s/edge-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-server
  labels:
    app: edge-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: edge-server
  template:
    metadata:
      labels:
        app: edge-server
    spec:
      hostname: edge-server
      containers:
      - name: edge-server
        image: zios07/edge-server
        ports:
        - containerPort: 8765
        resources:
          limits:
            cpu: ".1"
            memory: "256Mi"
---

apiVersion: v1
kind: Service
metadata:
  name: edge-server
spec:
  selector:
    app: edge-server
  ports:
  - name: "8765"
    port: 8765
    targetPort: 8765
