k8s/edge-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-server
  labels:
    app: edge-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edge-server
  template:
    metadata:
      labels:
        app: edge-server
    spec:
      containers:
      - name: edge-server
        image: zios07/edge-server:0.1.0
        ports:
        - containerPort: 8765
        resources:
          limits:
            cpu: ".1"
            memory: "256Mi"
---

apiVersion: v1
kind: Service
metadata:
  name: edge-server
spec:
  selector:
    app: edge-server
  ports:
  - port: 8765
