k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      hostname: postgres
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          resources:
            limits:
              cpu: ".1"
              memory: "256Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - port: 5432

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer-deployment
  labels:
    app: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
      - name: adminer
        image: adminer
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: ".1"
            memory: "256Mi"
 
---

apiVersion: v1
kind: Service
metadata:
  name: adminer
spec:
  selector:
    app: adminer
  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
