k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
  labels:
    app: front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
    spec:
      hostname: front-end
      containers:
      - name: front-end
        image: zios07/ecom-web
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: ".1"
            memory: "256Mi"
---

apiVersion: v1
kind: Service
metadata:
  name: front-end
spec:
  type: NodePort
  selector:
    app: front-end
  ports:
  - name: "80"
    port: 80
    nodePort: 30001
